feat(notify): 实现通知历史管理功能并修复多项问题
## 新增功能
- 通知历史管理：批量通知执行日志记录与查询
  - 新增 NotificationScheduleLog 实体与 Repository
  - 新增 NotificationScheduleLogService 服务层
  - 新增 NotificationScheduleLogController REST API
  - 新增 NotificationScheduleLogDTO 数据传输对象
  - 支持按状态、日期范围筛选查询通知历史
  - 支持分页查询与详情查看

- 前端监控中心优化
  - 添加标签页导航（系统健康/通知配置/通知历史）
  - 新增通知历史页面，展示批量通知执行记录
  - 优化页面布局与样式
  - 新增告警与通知侧边栏菜单项

## Bug 修复
- 修复 SQL 注释被保留到数据库的问题
  - SqlFingerprintUtil.cleanSql() 增加注释移除逻辑

- 修复不可变列表排序异常
  - NotificationScheduler.buildBatchReport() 中的 List.of() 改为 ArrayList

- 修复邮件地址解密问题
  - NotifyService 使用 getDecryptedValue() 读取敏感配置
  - 修复加密邮件地址直接使用导致的发送失败

## 技术改进
- TDD 开发模式：先编写测试，后实现功能
- 单元测试覆盖：Repository 与 Service 层测试
- 完善错误处理与日志记录